src/test/ui/associated-types/hr-associated-type-bound-2.stderr
error[E0275]: overflow evaluating the requirement `for<'b> u32: X<'b>`
  --> $DIR/hr-associated-type-bound-2.rs:11:1
   |
LL | / impl X<'_> for u32
LL | | where
LL | |     for<'b> <Self as X<'b>>::U: Clone,
LL | | {
LL | |     type U = str;
LL | | }
   | |_^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`hr_associated_type_bound_2`)
note: required because of the requirements on the impl of `for<'b> X<'b>` for `u32`
  --> $DIR/hr-associated-type-bound-2.rs:11:6
   |
LL | impl X<'_> for u32
   |      ^^^^^     ^^^
   = note: 128 redundant requirements hidden
   = note: required because of the requirements on the impl of `for<'b> X<'b>` for `u32`

error[E0275]: overflow evaluating the requirement `for<'b> u32: X<'b>`
  --> $DIR/hr-associated-type-bound-2.rs:15:5
   |
LL |     type U = str;
   |     ^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`hr_associated_type_bound_2`)
note: required because of the requirements on the impl of `for<'b> X<'b>` for `u32`
  --> $DIR/hr-associated-type-bound-2.rs:11:6
   |
LL | impl X<'_> for u32
   |      ^^^^^     ^^^
   = note: 128 redundant requirements hidden
   = note: required because of the requirements on the impl of `for<'b> X<'b>` for `u32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
